make sure all links have visible outline when focused.

--- a/src/Components/reusableComponents/RepoCard.module.scss
+++ b/src/Components/reusableComponents/RepoCard.module.scss
@@ -20,6 +20,7 @@
             overflow        : hidden;
             background-color: $basic-light;
             box-shadow      : 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
+            overflow: visible;
 
             a {
                 height         : 100%;
